--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <li><a href="t1.asc">t1@ikejima.org</a>
   <li><a href="t2.asc">t2@ikejima.org</a>
   <li><a href="t3.asc">t3@ikejima.org</a>
+  <li><a href="authorized_keys">authorized_keys</a>
 </ul>
 </html>
